infrastructure/networkpolicies/cluster-egress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "cluster-egress"
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - all
  egressDeny:
    - toCIDRSet:
        - cidr: 192.168.0.0/24
          except:
            - 192.168.0.100/32
            - 192.168.0.101/32
            - 192.168.0.102/32
            - 192.168.0.103/32
